# CI-CD-Project

./: .flake8  .gitignore  AI_API_KEYS_SETUP.md  AWS_S3_SETUP_GUIDE.md  BACKEND_TESTING_COMPLETE.md  CANDIDATE_DASHBOARD_GUIDE.md  CANDIDATE_DASHBOARD_IMPLEMENTATION.md  CHANGES_SUMMARY.md  D3_TEMPLATE_DELIVERABLES.md  DEEPFAKE_INTEGRATION.md  DEPLOYMENT_SETUP.md  ENDPOINT_TESTING_RESULTS.md  FINAL_ENDPOINT_TEST_RESULTS.md  FIXES_OLLAMA_TIMEOUT_GEMINI.md  FRONTEND_TESTING_COMPLETE.md  GEMINI_API_FIXES.md  IMPLEMENTATION_SUMMARY.md  NETWORK_TESTING_GUIDE.md  OLLAMA_FIX_COMPLETE.md  OLLAMA_FIX_SETTINGS.md  OLLAMA_SETUP_GUIDE.md  PROJECT_COMPLETE_DOCUMENTATION.md  PROJECT_SUMMARY.md  QUICK_FIX_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_API_KEYS.md  QUICK_TEST_REFERENCE.md  README.md  README_RECRUITER_DASHBOARD.md  README_TESTING.md  RECRUITER_DASHBOARD_COMPLETE.md  RECRUITER_DASHBOARD_IMPLEMENTATION.md  REMOTE_POSTGRESQL_SETUP.md  Readme.md  SAME_COMPUTER_TESTING_GUIDE.md  SYSTEM_READY_FOR_TESTING.md  TESTING_COMPLETE_CHECKLIST.md  TESTING_INFRASTRUCTURE_FILES.md  TESTING_SESSION_SUMMARY.md  TESTING_STATUS.md  (+13 more)
.github/: CI_CD_SETUP_GUIDE.md  CODEOWNERS  pull_request_template.md
deepfakemodel/: .gitignore  COLAB_GUIDE.md  CONFIGURATION.md  Deepfake_Detection_Colab.ipynb  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  analyze_dataset.py  camera_predictions.csv  camera_test.py  check_gpu.py  evaluate_dataset.py  evaluation_predictions.csv  inference.py  model_info.py  preprocess_videos.py  requirements.txt  run_pipeline.py  train_model.py  video_test_server.py
(+195 files in other folders)
